--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div id="message">
-  <h2>Watch this space for tweets about @ag_dubs!</h2>
+  <h2>Wait for it...</h2>
 </div>
 
 <div id="clap">
